[project]
name = "power01_cmd"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "baechu805", email = "bjoo606@naver.com"},
]
dependencies = [
    "power01-plus>=0.1.0",
    "power01-min>=0.1.1",
    "power01-div>=0.1.0",
    "power01-mul>=0.1.0",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
cmd = "power01_cmd.cmd:call"
[tool.pdm]
distribution = true
